Update old nickname txm -> tm

--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,11 @@ repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
-;Test::More=0.96
+File::chdir=0
+Perinci::Sub::Gen::Undoable=0.20
+;!lint-prereqs assume-used # undetected by scan_prereqs, used via riap
+Setup::File::Symlink=0
+Test::More=0.96
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
