--- a/dist.ini
+++ b/dist.ini
@@ -13,9 +13,10 @@ repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 
 [Prereqs / TestRequires]
 File::chdir=0
-Perinci::Sub::Gen::Undoable=0.20
+Perinci::Access::InProcess=0.29
+Perinci::Sub::Gen::Undoable=0.22
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via riap
-Setup::File::Symlink=0
+Setup::File::Symlink=0.22
 Test::More=0.96
 
 [Prereqs]
