--- a/dist.ini
+++ b/dist.ini
@@ -12,9 +12,9 @@ repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
-File::chdir=0
-Perinci::Access::InProcess=0.29
-Perinci::Sub::Gen::Undoable=0.23
+;NOT YET;File::chdir=0
+;NOT YET;Perinci::Access::InProcess=0.29
+;NOT YET;Perinci::Sub::Gen::Undoable=0.25
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via riap
 Setup::File::Symlink=0.22
 Test::More=0.96
