(WIP) Update to Rinci 1.1.26

--- a/dist.ini
+++ b/dist.ini
@@ -12,16 +12,14 @@ repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
-;NOT YET;File::chdir=0
-;NOT YET;Perinci::Access::InProcess=0.29
-;NOT YET;Perinci::Sub::Gen::Undoable=0.25
-;!lint-prereqs assume-used # undetected by scan_prereqs, used via riap
-Setup::File::Symlink=0.22
+File::chdir=0
+Perinci::Access::InProcess=0.30
 Test::More=0.96
+UUID::Random=0
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
-Rinci=1.1.23
+Rinci=1.1.26
 ;!lint-prereqs assume-used # spec
 Riap=1.1.14
 
@@ -30,5 +28,6 @@ perl=5.010001
 DBD::SQLite=0
 DBI=0
 File::Flock=0
+File::Remove=0
 JSON=0
 Log::Any=0
