--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,8 @@ repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 [Prereqs / TestRequires]
 File::chdir=0
 Perinci::Access::InProcess=0.30
+;!lint-prereqs assume-used # undetected by scan_prereqs, used via riap
+Perinci::Examples=0
 Test::More=0.96
 UUID::Random=0
 
