Pass -tx_action_id to function (Rinci 1.1.28)

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,7 @@ UUID::Random=0
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
-Rinci=1.1.27
+Rinci=1.1.28
 ;!lint-prereqs assume-used # spec
 Riap=1.1.14
 
@@ -33,6 +33,7 @@ File::Flock=0
 File::Remove=0
 JSON=0
 Log::Any=0
+UUID::Random=0
 
 [Extras / lint-prereqs / assume-provided]
 ; in t/lib/
