--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,7 @@ File::Flock=0
 File::Remove=0
 JSON=0
 Log::Any=0
+;Perinci::Sub::Util=0
 UUID::Random=0
 
 [Extras / lint-prereqs / assume-provided]
