Detect already existing package when require-ing e.g. main package, like in Perinci::Access::InProcess (code copy-pasted)

--- a/dist.ini
+++ b/dist.ini
@@ -34,6 +34,7 @@ File::Remove=0
 JSON=0
 Log::Any=0
 ;Perinci::Sub::Util=0
+SHARYANTO::Package::Util=0
 UUID::Random=0
 
 [Extras / lint-prereqs / assume-provided]
