Add 'use experimental smartmatch' for 5.18+

--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,7 @@ Rinci=1.1.29
 Riap=1.1.14
 
 perl=5.010001
+experimental=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via dbi
 DBD::SQLite=0
 DBI=0
