--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.44
+version=0.45
 
 name=Perinci-Tx-Manager
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -13,8 +13,8 @@ repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 
 [Prereqs / TestRequires]
 File::chdir=0
-Perinci::Access::InProcess=0.32
-Test::More=0.96
+Perinci::Access::Schemeless=0.32
+Test::More=0.98
 UUID::Random=0
 
 [Prereqs]
