--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage=http://metacpan.org/release/Perinci-Tx-Manager
 repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 File::chdir=0
