--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder=Steven Haryanto
 homepage=http://metacpan.org/release/Perinci-Tx-Manager
 repository=http://github.com/sharyanto/perl-Perinci-Tx-Manager
 
-[@SHARYANTO]
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs / TestRequires]
