--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.46
+version=0.47
 
 name=Perinci-Tx-Manager
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -29,7 +29,7 @@ File::Flock=0
 File::Remove=0
 JSON=0
 Log::Any=0
-;Perinci::Sub::Util=0
+Perinci::Sub::Util=0
 SHARYANTO::Package::Util=0
 UUID::Random=0
 
