Use the new renamed module SHARYANTO::Package::Util -> Package::MoreUtil

--- a/dist.ini
+++ b/dist.ini
@@ -26,8 +26,8 @@ File::Flock=0
 File::Remove=0
 JSON=0
 Log::Any=0
+Package::MoreUtil=0
 Perinci::Sub::Util=0
-SHARYANTO::Package::Util=0
 UUID::Random=0
 
 [Extras / lint-prereqs / assume-provided]
