[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -12,14 +12,14 @@ Test::More=0.98
 UUID::Random=0
 
 [Prereqs]
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Rinci=1.1.47
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Riap=1.1.14
 
 perl=5.010001
 experimental=0
-;!lint-prereqs assume-used # undetected by scan_prereqs, used via dbi
+;!lint_prereqs assume-used # undetected by scan_prereqs, used via dbi
 DBD::SQLite=0
 DBI=0
 File::Flock=0
