Switch from Log::Any to Log::Any::IfLOG

--- a/dist.ini
+++ b/dist.ini
@@ -25,7 +25,7 @@ DBI=0
 File::Flock=0
 File::Remove=0
 JSON=0
-Log::Any=0
+Log::Any::IfLOG=0
 Package::MoreUtil=0
 Perinci::Sub::Util=0
 UUID::Random=0
