--- a/dist.ini
+++ b/dist.ini
@@ -12,11 +12,6 @@ Test::More=0.98
 UUID::Random=0
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.47
-;!lint_prereqs assume-used # spec
-Riap=1.1.14
-
 perl=5.010001
 experimental=0
 ;!lint_prereqs assume-used # undetected by scan_prereqs, used via dbi
@@ -33,3 +28,9 @@ UUID::Random=0
 [Extras / lint-prereqs / assume-provided]
 ; in t/lib/
 TestTx = 0
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.47
+;!lint_prereqs assume-used # spec
+Riap=1.1.14
