--- a/dist.ini
+++ b/dist.ini
@@ -17,7 +17,7 @@ experimental=0
 ;!lint_prereqs assume-used # undetected by scan_prereqs, used via dbi
 DBD::SQLite=0
 DBI=0
-File::Flock=0
+File::Flock::Retry=0.61
 File::Remove=0
 JSON=0
 Log::Any::IfLOG=0
