--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.53
+version=0.54
 
 name=Perinci-Tx-Manager
 
@@ -30,7 +30,7 @@ UUID::Random=0
 TestTx = 0
 
 [Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.47
+;;!lint_prereqs assume-used # spec
+;Rinci=1.1.47
 ;!lint_prereqs assume-used # spec
 Riap=1.1.14
