--- a/dist.ini
+++ b/dist.ini
@@ -6,23 +6,31 @@ name=Perinci-Tx-Manager
 :version=0.23
 
 [Prereqs / TestRequires]
+lib=0
 File::chdir=0
-Perinci::Access::Schemeless=0.63
-Test::More=0.98
+File::Temp=0
+FindBin=0
 UUID::Random=0
 
 [Prereqs]
 perl=5.010001
 experimental=0
+strict=0
+warnings=0
 ;!lint_prereqs assume-used # undetected by scan_prereqs, used via dbi
 DBD::SQLite=0
 DBI=0
+Exporter=0
 File::Flock::Retry=0.61
 File::Remove=0
 JSON=0
 Log::Any::IfLOG=0.07
 Package::MoreUtil=0
+Perinci::Access::Schemeless=0.63
 Perinci::Sub::Util=0
+Scalar::Util=0
+Test::More=0.98
+Time::HiRes=0
 UUID::Random=0
 
 [Extras / lint-prereqs / assume-provided]
@@ -30,7 +38,8 @@ UUID::Random=0
 TestTx = 0
 
 [Prereqs / DevelopRecommends]
-;;!lint_prereqs assume-used # spec
-;Rinci=1.1.47
 ;!lint_prereqs assume-used # spec
 Riap=1.1.14
+;;!lint_prereqs assume-used # spec
+;Rinci=1.1.47
+
