--- a/dist.ini
+++ b/dist.ini
@@ -23,7 +23,7 @@ DBI=0
 Exporter=0
 File::Flock::Retry=0.61
 File::Remove=0
-JSON=0
+JSON::MaybeXS=0
 Log::Any::IfLOG=0.07
 Package::MoreUtil=0
 Perinci::Access::Schemeless=0.63
@@ -42,4 +42,3 @@ TestTx = 0
 Riap=1.1.14
 ;;!lint_prereqs assume-used # spec
 ;Rinci=1.1.47
-
