[dist] Move spec prereq from DevelopRecommends to DevelopSuggests with _SPEC:: prefix

--- a/dist.ini
+++ b/dist.ini
@@ -37,9 +37,5 @@ UUID::Random=0
 ; in t/lib/
 TestTx = 0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Riap=1.1.14
-;;!lint_prereqs assume-used # spec
-;Rinci=1.1.47
-
+[Prereqs / DevelopSuggests]
+_SPEC::Riap=1.1.14
