[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -37,5 +37,7 @@ UUID::Random=0
 ; in t/lib/
 TestTx = 0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Riap=1.1.14
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Riap=1.1.14
