--- a/dist.ini
+++ b/dist.ini
@@ -24,10 +24,10 @@ Exporter=0
 File::Flock::Retry=0.61
 File::Remove=0
 JSON::MaybeXS=0
-Log::Any::IfLOG=0.07
+Log::ger=0.011
 Package::MoreUtil=0
 Perinci::Access::Schemeless=0.87
-Perinci::Sub::Util=0
+Perinci::Sub::Util=0.46
 Scalar::Util=0
 Test::More=0.98
 Time::HiRes=0
@@ -41,3 +41,4 @@ TestTx = 0
 -phase=develop
 -relationship=x_spec
 Riap=1.1.14
+
